@@ -1546,6 +1546,10 @@ cat("done\n")
 DT = data.table(a=c(1,1,2,2,2,3,3,3,3),b=1:9)
 test(531, DT[,length(rownames(.SD)),by=a], data.table(a=1:3,V1=2:4))
 
+# Test column names with spaces, bug#1880
+DT = data.table("a b"=c(1,1,2,2,2),c=1:5,check.names=FALSE)
+test(532, DT[,sum(c),by="a b"], data.table("a b"=1:2,V1=c(3L,12L),check.names=FALSE))
+
 ## See test-* for more tests
 
 ##########################
